--- a/package.json
+++ b/package.json
@@ -152,7 +152,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint && lint-staged",
-      "pre-push": "npm run lint && npm run test"
+      "pre-push": "npm run lint && npx jest -o"
     }
   },
   "lint-staged": {
