--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "fs-extra": "^8.1.0",
+    "i18next": "^19.4.4",
+    "i18next-browser-languagedetector": "^4.2.0",
     "identity-obj-proxy": "3.0.0",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.5.0",
     "react-router-dom": "^5.2.0",
     "resolve": "1.15.0",
     "semver": "6.3.0",
