--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@testing-library/jest-dom": "^5.8.0",
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.3.5",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
@@ -50,6 +52,8 @@
     "babel-preset-react-app": "^9.1.2",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "3.4.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-react-app": "^5.2.1",
@@ -66,6 +70,7 @@
     "husky": "^4.2.5",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
+    "jest-enzyme": "^7.1.2",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "lint-staged": "^10.2.6",
@@ -79,6 +84,7 @@
     "postcss-safe-parser": "4.0.1",
     "prettier": "^2.0.5",
     "react-dev-utils": "^10.2.1",
+    "react-test-renderer": "^16.13.1",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "style-loader": "0.23.1",
@@ -132,6 +138,7 @@
     ],
     "modulePaths": [],
     "moduleNameMapper": {
+      "^src(.*)$": "<rootDir>/src$1",
       "^react-native$": "react-native-web",
       "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
     },
