--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,6 @@ services:
       - "/app/node_modules"
     restart: always
     tty: true
+    env_file:
+      - .env
     command: ["npm", "run", "start"]
