--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,18 @@ version: "3.8"
 
 services:
   client:
-    container_name: taska_client
+    container_name: taska
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        APP_DIR: "app"
     ports:
-      - "3000:3000"
+      - 3000:3000
     volumes:
-      - ".:/app"
-      - "/app/node_modules"
-    restart: always
+      - .:/app
+      - ./node_modules:/app/node_modules
+    restart: unless-stopped
     tty: true
     env_file:
       - .env
