--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "camelcase": "^5.3.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "firebase": "^7.14.5",
     "fs-extra": "^8.1.0",
     "i18next": "^19.4.4",
     "i18next-browser-languagedetector": "^4.2.0",
