--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-REACT_APP_FIREBASE_KEY=XXX
-REACT_APP_FIREBASE_DOMAIN=XXX
-REACT_APP_FIREBASE_DATABASE=XXX
-REACT_APP_FIREBASE_PROJECT_ID=XXX
-REACT_APP_FIREBASE_STORAGE_BUCKET=XXX
-REACT_APP_FIREBASE_SENDER_ID=XXX
-REACT_APP_FIREBASE_APP_ID=XXX
-REACT_APP_FIREBASE_MEASUREMENT_ID=XXX
+REACT_APP_FIREBASE_KEY=
+REACT_APP_FIREBASE_DOMAIN=
+REACT_APP_FIREBASE_DATABASE=
+REACT_APP_FIREBASE_PROJECT_ID=
+REACT_APP_FIREBASE_STORAGE_BUCKET=
+REACT_APP_FIREBASE_SENDER_ID=
+REACT_APP_FIREBASE_APP_ID=
+REACT_APP_FIREBASE_MEASUREMENT_ID=
