add route constants and button disabled state styles

--- a/package.json
+++ b/package.json
@@ -163,7 +163,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint && lint-staged",
-      "pre-push": "npm run lint && npx jest -o"
+      "pre-push": "npm run lint && npm run test --watchAll=false"
     }
   },
   "lint-staged": {
