--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serve": "serve -s build"
   },
   "dependencies": {
+    "@loadable/component": "^5.12.0",
     "camelcase": "^5.3.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
+    "@loadable/babel-plugin": "^5.12.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^5.8.0",
     "@testing-library/react": "^10.0.4",
@@ -39,6 +41,7 @@
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^25.2.3",
+    "@types/loadable__component": "^5.10.0",
     "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
