--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
+    "react-helmet-async": "^1.0.6",
     "react-i18next": "^11.5.0",
     "react-router-dom": "^5.2.0",
     "resolve": "1.15.0",
