update github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - release/*
 
 jobs:
   build:
@@ -17,18 +18,18 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build-prod
+        run: npm run build
 
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
-          name: dist
-          path: dist
-          
+          name: build
+          path: build
+
   deploy:
     name: Deploy
     needs: [build]
-    runs-on: ubuntu-latest    
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
         uses: actions/checkout@master
@@ -36,9 +37,9 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@master
         with:
-          name: dist
-          path: dist
-      
+          name: build
+          path: build
+
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
