--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "semver": "6.3.0",
     "styled-components": "^5.1.0",
     "styled-system": "^5.1.5",
-    "typescript": "~3.7.2"
+    "typescript": "^3.9.3"
   },
   "devDependencies": {
-    "@babel/core": "7.9.0",
+    "@babel/core": "^7.10.1",
     "@loadable/babel-plugin": "^5.12.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^5.8.0",
