--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.15.0",
     "semver": "6.3.0",
     "styled-components": "^5.1.0",
