--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "identity-obj-proxy": "3.0.0",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-helmet-async": "^1.0.6",
     "react-i18next": "^11.5.0",
@@ -48,6 +49,7 @@
     "@types/loadable__component": "^5.10.0",
     "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
+    "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
