--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,14 @@
-/node_modules
-/build
 .dockerignore
+.env
+.firebaserc
+.gitignore
 Dockerfile
-
-/.env
-
-/.git
-/.gitignore
-/.github
-
-/.firebase
-/.firebaserc
 firebase.json
 firestore.indexes.json
 firestore.rules
+
+/.firebase
+/.git
+/.github
+/build
+/node_modules
