--- a/firebase.json
+++ b/firebase.json
@@ -1,19 +1,15 @@
 {
   "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
+    "indexes": "firestore.indexes.json",
+    "rules": "firestore.rules"
   },
   "hosting": {
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "public": "build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
     "rewrites": [
       {
-        "source": "**",
-        "destination": "/index.html"
+        "destination": "/index.html",
+        "source": "**"
       }
     ]
   },
