--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@loadable/component": "^5.12.0",
+    "anchorme": "^2.1.2",
     "camelcase": "^5.3.1",
     "date-fns": "^2.14.0",
     "dotenv": "8.2.0",
