--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next": "^19.4.4",
     "i18next-browser-languagedetector": "^4.2.0",
     "identity-obj-proxy": "3.0.0",
+    "rc-tooltip": "^4.2.3",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-custom-scrollbars": "^4.2.1",
