--- a/package.json
+++ b/package.json
@@ -4,196 +4,55 @@
   "author": "Nikita Karapuzov <karapuzov.nikita@gmail.com>",
   "private": true,
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "cross-env GENERATE_SOURCEMAP=false node scripts/build.js",
-    "test": "node scripts/test.js --passWithNoTests",
-    "test:ci": "cross-env CI=true npm run test --env=jsdom",
-    "lint": "eslint --cache src/**/*.{ts,tsx} --config .eslintrc.json",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint **/*.{ts,tsx} --color --cache --config .eslintrc.json",
     "lint:fix": "yarn lint --fix",
     "lint:types": "tsc --noEmit",
-    "serve": "serve -s build"
+    "prettify": "prettier --write \"**/*.{ts,tsx,js,jsx,scss,css,json}\""
   },
   "dependencies": {
-    "@loadable/component": "^5.12.0",
-    "anchorme": "^2.1.2",
-    "camelcase": "^5.3.1",
-    "date-fns": "^2.14.0",
-    "dotenv": "8.2.0",
-    "dotenv-expand": "5.1.0",
-    "firebase": "^7.14.5",
-    "fs-extra": "^8.1.0",
-    "i18next": "^19.4.4",
-    "i18next-browser-languagedetector": "^4.2.0",
-    "identity-obj-proxy": "3.0.0",
-    "rc-tooltip": "^4.2.3",
-    "react": "^16.13.1",
-    "react-app-polyfill": "^1.0.6",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-datepicker": "^3.0.0",
-    "react-dom": "^16.13.1",
-    "react-helmet-async": "^1.0.6",
-    "react-i18next": "^11.5.0",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-toastify": "^6.0.8",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "resolve": "1.15.0",
-    "semver": "6.3.0",
-    "styled-components": "^5.1.0",
-    "styled-system": "^5.1.5",
-    "typescript": "^3.9.3"
+    "next": "10.0.9",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.1",
-    "@loadable/babel-plugin": "^5.12.0",
-    "@svgr/webpack": "4.3.3",
-    "@testing-library/jest-dom": "^5.8.0",
-    "@testing-library/react": "^10.0.4",
-    "@testing-library/user-event": "^10.3.5",
-    "@types/enzyme": "^3.10.5",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^25.2.3",
-    "@types/loadable__component": "^5.10.0",
-    "@types/node": "^14.0.5",
-    "@types/react": "^16.9.35",
-    "@types/react-custom-scrollbars": "^4.0.6",
-    "@types/react-datepicker": "^3.0.2",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/redux": "^3.6.0",
-    "@types/styled-components": "^5.1.0",
-    "@types/styled-system": "^5.1.9",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "8.1.0",
-    "babel-plugin-named-asset-import": "^0.3.6",
-    "babel-plugin-styled-components": "^1.10.7",
-    "babel-preset-react-app": "^9.1.2",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "3.4.2",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-react-app": "^5.2.1",
-    "eslint-loader": "3.0.3",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "4.6.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "file-loader": "4.3.0",
-    "html-webpack-plugin": "4.0.0-beta.11",
-    "husky": "^4.2.5",
-    "jest": "24.9.0",
-    "jest-environment-jsdom-fourteen": "1.0.1",
-    "jest-enzyme": "^7.1.2",
-    "jest-resolve": "24.9.0",
-    "jest-watch-typeahead": "0.4.2",
-    "lint-staged": "^10.2.6",
-    "mini-css-extract-plugin": "0.9.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "pnp-webpack-plugin": "1.6.4",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "8.0.1",
-    "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.1",
-    "prettier": "^2.0.5",
-    "react-dev-utils": "^10.2.1",
-    "react-test-renderer": "^16.13.1",
-    "redux-devtools-extension": "^2.13.8",
-    "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.2",
-    "serve": "^11.3.1",
-    "style-loader": "0.23.1",
-    "terser-webpack-plugin": "2.3.5",
-    "ts-pnp": "1.1.6",
-    "url-loader": "2.3.0",
-    "webpack": "4.42.0",
-    "webpack-dev-server": "3.10.3",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
-  },
-  "browserslist": {
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ],
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ]
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.ts"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jest-environment-jsdom-fourteen",
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^src(.*)$": "<rootDir>/src$1",
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ]
+    "@babel/eslint-parser": "^7.13.10",
+    "@babel/eslint-plugin": "^7.13.10",
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/styled-components": "^5.1.9",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "babel-plugin-styled-components": "^1.12.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^5.2.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint:types && lint-staged",
-      "pre-push": "yarn lint:types && yarn test:ci"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-    "*.{js,ts,tsx}": [
-      "yarn lint:fix"
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix --config .eslintrc.json",
+      "git add --force"
+    ],
+    "*.{ts,tsx,js,jsx,json}": [
+      "prettier --write",
+      "git add --force"
     ]
   }
 }
