--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
     "plugin:jsx-a11y/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:import/typescript",
-    "prettier"
+    "plugin:prettier/recommended"
   ],
   "plugins": ["@babel", "@typescript-eslint", "prettier", "react"],
   "settings": {
@@ -33,10 +33,16 @@
       "fragment": "Fragment",
       "version": "detect"
     },
+    "import/parser": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
     "import/resolver": {
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"],
         "moduleDirectory": ["node_modules", "./"]
+      },
+      "typescript": {
+        "alwaysTryTypes": true
       }
     }
   },
